@@ -11,7 +11,27 @@ if($_SERVER['REQUEST_METHOD'] == "POST") {
     $email = $_POST['email'];
     $senha = $_POST['senha'];
 }
-//precisa verificar se o email já existe e, se sim, não permitir o registro.
+if(!isset($_SESSION['email'])) {
+    $stmt = $conn->prepare("SELECT email FROM tabela_administradores WHERE email='$email'
+    UNION SELECT email FROM tabela_medicos WHERE email='$email'
+    UNION SELECT email FROM tabela_pacientes WHERE email='$email'");
+    $stmt->execute();
+    $usuario = $stmt->fetch(PDO::FETCH_ASSOC);
+    if ($email != '') {
+        if ($usuario['email'] == $email) {
+            echo 'Esse email já está sendo utilidado.';
+        } else {
+            $stmt = $conn->prepare("INSERT INTO tabela_pacientes (email, senha, tipo) VALUES ('$email', '$senha', 'paciente')");
+            $stmt->execute();
+            $stmt = $conn->prepare("SELECT email, senha, tipo FROM tabela_pacientes WHERE email='$email'");
+            $stmt->execute();
+            $usuario = $stmt->fetch(PDO::FETCH_ASSOC);
+            $_SESSION['email'] = $usuario['email'];
+            $_SESSION['tipodeusuario'] = $usuario['tipo'];
+            header('location: /vittaclinic2/index.php');
+        }
+    }
+}
 ?>
 <!doctype html>
 <html lang="eng">
@@ -32,7 +52,7 @@ if($_SERVER['REQUEST_METHOD'] == "POST") {
     <p>Nessa página o paciente deve poder se registrar.</p>
     <form method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>">
         Email: <input type="email" name="email"> <br>
-        Senha: <input type="password" name="Senha"> <br>
+        Senha: <input type="password" name="senha"> <br>
         <input type="submit">
     </form>
     <p><a href="/vittaclinic2/paginas/comum/entrar.php">Entrar</a></p>
